# AI-aesthetician

./: .env.example  README.md  package-lock.json  package.json
AI-aesthetician/: package.json
AI-aesthetician/src/: App.js
AI-aesthetician/src/Components/: AestheticianDetection.js  ChatBox.js  VideoChat.js  style.css
frontend/: .gitignore
frontend/src/: App.js
frontend/src/Components/: EventLog.js  SessionControls.js  VideoChat.js  style.css
server/: exploration.txt  index.js  main.py  pyproject.toml  requirements.txt
