[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "openai>=1.63.0",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.12.1",
    "uvicorn>=0.34.0",
]
